# CameraDscSearch

./: README.md
CameraDscSearch/: CMakeLists.txt  CameraDscSearch.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
CameraDscSearch/include/: lib_qthelper.h  lib_utils.h  model2.h
CameraDscSearch/src/: lib_qthelper.cpp  lib_utils.cpp  model2.cpp
Desc/DscPlugin_CooMat/: DscPlugin_CooMat.pro  libdscplugin_coomatrix.cfg
Desc/DscPlugin_CooMat/include/: dscplugincoomatrix.h
Desc/DscPlugin_CooMat/src/: dscplugincoomatrix.cpp
Desc/DscPlugin_MeanCh/: DscPlugin_MeanCh.pro
Desc/DscPlugin_MeanCh/include/: dscplugin_meanch.h  dscplugininterface.h
Desc/DscPlugin_MeanCh/src/: dscplugin_meanch.cpp
